syntax.output
Terminals unused in grammar

   CS
   CE


State 35 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT ID LC DefList RC
   13                | STRUCT ID

   14 VarDec: ID
   15       | VarDec LB INT RB

   16 FunDec: ID LP VarList RP
   17       | ID LP RP
   18       | ID LP error

   19 VarList: ParamDec COMMA VarList
   20        | ParamDec

   21 ParamDec: Specifier VarDec

   22 CompSt: LC DefList StmtList RC
   23       | LC DefList StmtList error

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | RETURN Exp error
   33     | FOR LP Def ExpListEx SEMI ExpListEx RP Stmt
   34     | FOR LP ExpListEx SEMI ExpListEx SEMI ExpListEx RP Stmt

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI
   38    | Specifier DecList error

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGN Exp

   43 Exp: Exp ASSIGN Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp LT Exp
   47    | Exp LE Exp
   48    | Exp GT Exp
   49    | Exp GE Exp
   50    | Exp NE Exp
   51    | Exp EQ Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp MUL Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | CHAR
   67    | ID LP Args error
   68    | error

   69 ExpList: Exp
   70        | Exp COMMA ExpList

   71 ExpListEx: ExpList
   72          | %empty

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 18 23 32 38 67 68
TYPE (258) 10
ID (259) 12 13 14 16 17 18 59 60 62 63 67
CHAR (260) 66
FLOAT (261) 65
INT (262) 15 64
STRUCT (263) 12 13
IF (264) 29 30
ELSE (265) 30
WHILE (266) 31
FOR (267) 33 34
RETURN (268) 28 32
DOT (269) 62
SEMI (270) 4 5 26 28 33 34 37
COMMA (271) 9 19 40 70 73
ASSIGN (272) 42 43
LT (273) 46
LE (274) 47
GT (275) 48
GE (276) 49
NE (277) 50
EQ (278) 51
PLUS (279) 52
MINUS (280) 53 57
MUL (281) 54
DIV (282) 55
AND (283) 44
OR (284) 45
NOT (285) 58
LP (286) 16 17 18 29 30 31 33 34 56 59 60 67
RP (287) 16 17 29 30 31 33 34 56 59 60
LB (288) 15 61
RB (289) 15 61
LC (290) 12 22 23
RC (291) 12 22
CS (292)
CE (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Program (40)
    on left: 1, on right: 0
ExtDefList (41)
    on left: 2 3, on right: 1 2
ExtDef (42)
    on left: 4 5 6 7, on right: 2
ExtDecList (43)
    on left: 8 9, on right: 4 7 9
Specifier (44)
    on left: 10 11, on right: 4 5 6 7 21 37 38
StructSpecifier (45)
    on left: 12 13, on right: 11
VarDec (46)
    on left: 14 15, on right: 8 9 15 21 41 42
FunDec (47)
    on left: 16 17 18, on right: 6
VarList (48)
    on left: 19 20, on right: 16 19
ParamDec (49)
    on left: 21, on right: 19 20
CompSt (50)
    on left: 22 23, on right: 6 27
StmtList (51)
    on left: 24 25, on right: 22 23 24
Stmt (52)
    on left: 26 27 28 29 30 31 32 33 34, on right: 24 29 30 31 33 34
DefList (53)
    on left: 35 36, on right: 12 22 23 35
Def (54)
    on left: 37 38, on right: 33 35
DecList (55)
    on left: 39 40, on right: 37 38 40
Dec (56)
    on left: 41 42, on right: 39 40
Exp (57)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68, on right: 26 28 29 30 31 32 42 43 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 61 62 69 70 73 74
ExpList (58)
    on left: 69 70, on right: 70 71
ExpListEx (59)
    on left: 71 72, on right: 33 34
Args (60)
    on left: 73 74, on right: 59 67 73


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . ID LC DefList RC
   13                | STRUCT . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error

    ID    shift, and go to state 11
    SEMI  shift, and go to state 12

    ExtDecList  go to state 13
    VarDec      go to state 14
    FunDec      go to state 15


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   12 StructSpecifier: STRUCT ID . LC DefList RC
   13                | STRUCT ID .

    LC  shift, and go to state 16

    $default  reduce using rule 13 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

   14 VarDec: ID .
   16 FunDec: ID . LP VarList RP
   17       | ID . LP RP
   18       | ID . LP error

    LP  shift, and go to state 17

    $default  reduce using rule 14 (VarDec)


State 12

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 13

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 18
    SEMI   shift, and go to state 19


State 14

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   15 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 20
    LB     shift, and go to state 21

    $default  reduce using rule 8 (ExtDecList)


State 15

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 22

    CompSt  go to state 23


State 16

   12 StructSpecifier: STRUCT ID LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 7
    DefList          go to state 25
    Def              go to state 26


State 17

   16 FunDec: ID LP . VarList RP
   17       | ID LP . RP
   18       | ID LP . error

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 28

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 30
    ParamDec         go to state 31


State 18

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 20

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  go to state 33
    VarDec      go to state 14


State 21

   15 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 22

   22 CompSt: LC . DefList StmtList RC
   23       | LC . DefList StmtList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 7
    DefList          go to state 35
    Def              go to state 26


State 23

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 24

   37 Def: Specifier . DecList SEMI
   38    | Specifier . DecList error

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


State 25

   12 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 39


State 26

   35 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 24
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 26


State 27

   18 FunDec: ID LP error .

    $default  reduce using rule 18 (FunDec)


State 28

   17 FunDec: ID LP RP .

    $default  reduce using rule 17 (FunDec)


State 29

   21 ParamDec: Specifier . VarDec

    ID  shift, and go to state 32

    VarDec  go to state 41


State 30

   16 FunDec: ID LP VarList . RP

    RP  shift, and go to state 42


State 31

   19 VarList: ParamDec . COMMA VarList
   20        | ParamDec .

    COMMA  shift, and go to state 43

    $default  reduce using rule 20 (VarList)


State 32

   14 VarDec: ID .

    $default  reduce using rule 14 (VarDec)


State 33

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 34

   15 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 44


State 35

   22 CompSt: LC DefList . StmtList RC
   23       | LC DefList . StmtList error

    error   shift, and go to state 45
    ID      shift, and go to state 46
    CHAR    shift, and go to state 47
    FLOAT   shift, and go to state 48
    INT     shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    FOR     shift, and go to state 52
    RETURN  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 22

    error  [reduce using rule 25 (StmtList)]
    RC     reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 36

   15 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 61
    LB      shift, and go to state 21

    $default  reduce using rule 41 (Dec)


State 37

   37 Def: Specifier DecList . SEMI
   38    | Specifier DecList . error

    error  shift, and go to state 62
    SEMI   shift, and go to state 63


State 38

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 64

    $default  reduce using rule 39 (DecList)


State 39

   12 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 40

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 41

   15 VarDec: VarDec . LB INT RB
   21 ParamDec: Specifier VarDec .

    LB  shift, and go to state 21

    $default  reduce using rule 21 (ParamDec)


State 42

   16 FunDec: ID LP VarList RP .

    $default  reduce using rule 16 (FunDec)


State 43

   19 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 29
    StructSpecifier  go to state 7
    VarList          go to state 65
    ParamDec         go to state 31


State 44

   15 VarDec: VarDec LB INT RB .

    $default  reduce using rule 15 (VarDec)


State 45

   68 Exp: error .

    $default  reduce using rule 68 (Exp)


State 46

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .
   67    | ID . LP Args error

    LP  shift, and go to state 66

    $default  reduce using rule 63 (Exp)


State 47

   66 Exp: CHAR .

    $default  reduce using rule 66 (Exp)


State 48

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 49

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 50

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 67


State 51

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 68


State 52

   33 Stmt: FOR . LP Def ExpListEx SEMI ExpListEx RP Stmt
   34     | FOR . LP ExpListEx SEMI ExpListEx SEMI ExpListEx RP Stmt

    LP  shift, and go to state 69


State 53

   28 Stmt: RETURN . Exp SEMI
   32     | RETURN . Exp error

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 70


State 54

   57 Exp: MINUS . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 71


State 55

   58 Exp: NOT . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 72


State 56

   56 Exp: LP . Exp RP

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 73


State 57

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 58

   22 CompSt: LC DefList StmtList . RC
   23       | LC DefList StmtList . error

    error  shift, and go to state 74
    RC     shift, and go to state 75


State 59

   24 StmtList: Stmt . StmtList

    error   shift, and go to state 45
    ID      shift, and go to state 46
    CHAR    shift, and go to state 47
    FLOAT   shift, and go to state 48
    INT     shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    FOR     shift, and go to state 52
    RETURN  shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 22

    error  [reduce using rule 25 (StmtList)]
    RC     reduce using rule 25 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 76
    Stmt      go to state 59
    Exp       go to state 60


State 60

   26 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT     shift, and go to state 77
    SEMI    shift, and go to state 78
    ASSIGN  shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    LB      shift, and go to state 92


State 61

   42 Dec: VarDec ASSIGN . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 93


State 62

   38 Def: Specifier DecList error .

    $default  reduce using rule 38 (Def)


State 63

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 64

   40 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   go to state 36
    DecList  go to state 94
    Dec      go to state 38


State 65

   19 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 19 (VarList)


State 66

   59 Exp: ID LP . Args RP
   60    | ID LP . RP
   67    | ID LP . Args error

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 95

    Exp   go to state 96
    Args  go to state 97


State 67

   29 Stmt: IF LP . Exp RP Stmt
   30     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 98


State 68

   31 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 99


State 69

   33 Stmt: FOR LP . Def ExpListEx SEMI ExpListEx RP Stmt
   34     | FOR LP . ExpListEx SEMI ExpListEx SEMI ExpListEx RP Stmt

    error   shift, and go to state 45
    TYPE    shift, and go to state 1
    ID      shift, and go to state 46
    CHAR    shift, and go to state 47
    FLOAT   shift, and go to state 48
    INT     shift, and go to state 49
    STRUCT  shift, and go to state 2
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56

    SEMI  reduce using rule 72 (ExpListEx)

    Specifier        go to state 24
    StructSpecifier  go to state 7
    Def              go to state 100
    Exp              go to state 101
    ExpList          go to state 102
    ExpListEx        go to state 103


State 70

   28 Stmt: RETURN Exp . SEMI
   32     | RETURN Exp . error
   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    error   shift, and go to state 104
    DOT     shift, and go to state 77
    SEMI    shift, and go to state 105
    ASSIGN  shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    LB      shift, and go to state 92


State 71

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    $default  reduce using rule 57 (Exp)


State 72

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT     shift, and go to state 77
    ASSIGN  shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    LB      shift, and go to state 92

    $default  reduce using rule 58 (Exp)


State 73

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT     shift, and go to state 77
    ASSIGN  shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    RP      shift, and go to state 106
    LB      shift, and go to state 92


State 74

   23 CompSt: LC DefList StmtList error .

    $default  reduce using rule 23 (CompSt)


State 75

   22 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 22 (CompSt)


State 76

   24 StmtList: Stmt StmtList .

    $default  reduce using rule 24 (StmtList)


State 77

   62 Exp: Exp DOT . ID

    ID  shift, and go to state 107


State 78

   26 Stmt: Exp SEMI .

    $default  reduce using rule 26 (Stmt)


State 79

   43 Exp: Exp ASSIGN . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 108


State 80

   46 Exp: Exp LT . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 109


State 81

   47 Exp: Exp LE . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 110


State 82

   48 Exp: Exp GT . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 111


State 83

   49 Exp: Exp GE . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 112


State 84

   50 Exp: Exp NE . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 113


State 85

   51 Exp: Exp EQ . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 114


State 86

   52 Exp: Exp PLUS . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 115


State 87

   53 Exp: Exp MINUS . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 116


State 88

   54 Exp: Exp MUL . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 117


State 89

   55 Exp: Exp DIV . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 118


State 90

   44 Exp: Exp AND . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 119


State 91

   45 Exp: Exp OR . Exp

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 120


State 92

   61 Exp: Exp LB . Exp RB

    error  shift, and go to state 45
    ID     shift, and go to state 46
    CHAR   shift, and go to state 47
    FLOAT  shift, and go to state 48
    INT    shift, and go to state 49
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 121


State 93

   42 Dec: VarDec ASSIGN Exp .
   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT     shift, and go to state 77
    ASSIGN  shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    LB      shift, and go to state 92

    $default  reduce using rule 42 (Dec)


State 94

   40 DecList: Dec COMMA DecList .

    $default  reduce using rule 40 (DecList)


State 95

   60 Exp: ID LP RP .

    $default  reduce using rule 60 (Exp)


State 96

   43 Exp: Exp . ASSIGN Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . LT Exp
   47    | Exp . LE Exp
   48    | Exp . GT Exp
   49    | Exp . GE Exp
   50    | Exp . NE Exp
   51    | Exp . EQ Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . MUL Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   73 Args: Exp . COMMA Args
   74     | Exp .

    DOT     shift, and go to state 77
    COMMA   shift, and go to state 122
    ASSIGN  shift, and go to state 79
    LT      shift, and go to state 80
    LE      shift, and go to state 81
    GT      shift, and go to state 82
    GE      shift, and go to state 83
    NE      shift, and go to state 84
    EQ      shift, and go to state 85
    PLUS    shift, and go to state 86
    MINUS   shift, and go to state 87
    MUL     shift, and go to state 88
    DIV     shift, and go to state 89
    AND     shift, and go to state 90
    OR      shift, and go to state 91
    LB      shift, and go to state 92

    $default  reduce using rule 74 (Args)


State 97

   59 Exp: ID LP Args . RP
   67    | ID LP Args . error

    error  shift, and go to state 123
    RP     shift, and go to state 124


State 98
